...
            <point key="canvasLocation" x="-794" y="-6"/>
        </scene>
        <!--Moves-->
        <scene sceneID="4Cf-6D-nGL">
            <objects>
                <navigationController id="DM3-lT-oml" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Moves" image="ballshadow" id="tbh-Y4-7eM"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="K0O-hG-7hh">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="6LF-n7-3tm" kind="relationship" relationship="rootViewController" id="hym-db-ESn"/>
...
                            <constraint firstItem="PbF-eB-Fha" firstAttribute="centerX" secondItem="qhj-bL-6Pw" secondAttribute="centerX" id="nUw-JW-71I"/>
                            <constraint firstItem="15G-Eg-8Qq" firstAttribute="trailing" secondItem="mid-GQ-1Qw" secondAttribute="trailing" id="sXh-Ik-Ruk"/>
                            <constraint firstItem="hnR-cY-cC1" firstAttribute="leading" secondItem="mid-GQ-1Qw" secondAttribute="leading" id="zL4-XV-meF"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="mid-GQ-1Qw"/>
                    </view>
                    <navigationItem key="navigationItem" title="Move" id="DwM-PR-beR"/>
                    <connections>
                        <outlet property="activityView" destination="hnR-cY-cC1" id="TQG-dd-u1Z"/>
                        <outlet property="searchBar" destination="15G-Eg-8Qq" id="gPO-Wp-qA7"/>
                        <outlet property="tableView" destination="z8i-aJ-jMk" id="WSi-mQ-3nw"/>
                    </connections>
                </viewController>
...
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="p1S-Ku-RuX">
                                        <rect key="frame" x="33.5" y="225.5" width="347.5" height="80"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ARM-uB-Ba3">
                                                <rect key="frame" x="0.0" y="0.0" width="88.5" height="80"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Base Power" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5O-Px-EcP">
                                                        <rect key="frame" x="0.0" y="0.0" width="88.5" height="40"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="I8J-hG-jIo"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                        <nil key="textColor"/>
...
            <point key="canvasLocation" x="1310" y="1105"/>
        </scene>
        <!--Items-->
        <scene sceneID="Dtb-A0-cvd">
            <objects>
                <navigationController id="MHg-5O-FB8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Items" image="candyshadow" id="89c-xB-Fmw"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eHS-ED-dCU">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="c6x-hy-huq" kind="relationship" relationship="rootViewController" id="3so-Rx-dCy"/>
...
                            <constraint firstItem="9SF-En-DAR" firstAttribute="trailing" secondItem="hpJ-Bf-BhU" secondAttribute="trailing" id="gyj-cG-g17"/>
                            <constraint firstItem="UVz-sH-L3L" firstAttribute="centerX" secondItem="eT3-VB-ftG" secondAttribute="centerX" id="itq-z2-0Cd"/>
                            <constraint firstItem="9SF-En-DAR" firstAttribute="top" secondItem="hpJ-Bf-BhU" secondAttribute="top" id="mUD-rO-gLu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hpJ-Bf-BhU"/>
                    </view>
                    <navigationItem key="navigationItem" title="Item" id="bub-Oe-BfF"/>
                    <connections>
                        <outlet property="activityView" destination="9SF-En-DAR" id="o7r-ML-e73"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="K9d-u3-Hfh" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="140.57971014492756" y="1504.6875"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="8U6-lz-iol">
            <objects>
                <navigationController id="Dgd-f0-xbf" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorites" image="ic_ice" id="ghD-FL-KST"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lYJ-F5-pCa">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="afp-KC-3Uh" kind="relationship" relationship="rootViewController" id="k8N-0b-v4h"/>
...
                            <constraint firstItem="bdT-dG-QMY" firstAttribute="trailing" secondItem="S7M-IA-gdo" secondAttribute="trailing" id="irS-gs-59v"/>
                            <constraint firstItem="S7M-IA-gdo" firstAttribute="bottom" secondItem="eB2-lx-QIi" secondAttribute="bottom" id="ugW-N4-m7K"/>
                            <constraint firstItem="S7M-IA-gdo" firstAttribute="bottom" secondItem="Exx-rH-nQr" secondAttribute="bottom" constant="5" id="yd1-Sr-6Rc"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="S7M-IA-gdo"/>
                    </view>
                    <navigationItem key="navigationItem" title="Favorite" id="69W-QM-TTI"/>
                    <connections>
                        <outlet property="activityView" destination="eB2-lx-QIi" id="ig3-oE-dqg"/>
                        <outlet property="collectionView" destination="Exx-rH-nQr" id="iGn-iP-FeY"/>
                        <outlet property="searchBar" destination="bdT-dG-QMY" id="WCE-nj-qbb"/>
                    </connections>
                </viewController>
...
